fix(layout): set max width for collapse panel

--- a/packages/layout/src/panel/components/collapse-panel/CollapsePanel.module.css
+++ b/packages/layout/src/panel/components/collapse-panel/CollapsePanel.module.css
@@ -1,4 +1,6 @@
 .collapsePanel {
+  width: 15rem;
+
   &.collapsed {
     width: calc(32px + 48px);
   }
